<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:id="@+id/card_event_item"
    android:layout_margin="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_cover_event"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@mipmap/ic_launcher_round"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            android:contentDescription="@string/content_description_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_category"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeColor="@color/navy"
            app:chipStrokeWidth="3dp"
            app:layout_constraintTop_toBottomOf="@+id/img_cover_event"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:lines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@+id/chip_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <TextView
            android:id="@+id/tv_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_owner"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_title"/>

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_summary"
            app:layout_constraintTop_toBottomOf="@+id/tv_owner_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>