<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_cover_event"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/RoundedImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/img_cover_event"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/event_category"
            app:chipStrokeWidth="3dp"
            app:chipStrokeColor="@color/navy"
            app:chipBackgroundColor="@color/white"/>

        <ImageView
            android:id="@+id/img_favorite_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintTop_toBottomOf="@id/img_cover_event"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:lines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@+id/chip_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_alarm"
            app:drawableTint="@color/navy"
            android:drawablePadding="8dp"
            android:text="@string/event_date"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_title"/>

        <TextView
            android:id="@+id/tv_event_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_group_of_people"
            app:drawableTint="@color/navy"
            android:drawablePadding="8dp"
            android:text="@string/event_quota"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_date"/>

        <TextView
            android:id="@+id/tv_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_owner"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_quota"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/event_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_owner_name"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            app:layout_constraintTop_toBottomOf="@id/tv_description"/>

        <include
            android:id="@+id/loading_view"
            layout="@layout/loading_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
