<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_event_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_event"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="18dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <FrameLayout
            android:id="@+id/container_upcoming_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_upcoming"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_event_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include
                android:id="@+id/loading_layout_upcoming_event"
                layout="@layout/loading_layout"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_event_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finished_event"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="18dp"
            app:layout_constraintTop_toBottomOf="@+id/container_upcoming_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_finished"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_event_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="85dp"
                android:nestedScrollingEnabled="false" />

            <include
                android:id="@+id/loading_layout_finished_event"
                layout="@layout/loading_layout" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
